--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
   <nav>
     <a href="#about">About</a>
     <a href="#poems">Poems</a>
+    <a href="#its-me">It’s Me</a>
+  <a href="#princess">Princess November</a>
+  <a href="#horror">Horror Poems</a>
     <a href="#contact">Contact</a>
   </nav>
   <section id="about">
