--- a/index.html
+++ b/index.html
@@ -291,6 +291,25 @@ In every breath and silent stair…<br>
 The doll still lives… and haunts the air.
   </p>
 </div>
+    
+    <section id="stories">
+  <h2>Stories</h2>
+  <div class="poem">
+    <div class="poem-title">Welcome to the Bakery</div>
+    <p>
+      A chilling horror story written by Kriti Kumari.  
+      Read it as an eBook (PDF) below:
+    </p>
+    <a href="stories/welcome-to-the-bakery.pdf" target="_blank" 
+       style="display:inline-block; margin-top:10px; padding:10px 15px; 
+       background:#d46a6a; color:white; border-radius:8px; text-decoration:none; 
+       font-weight:bold; box-shadow:0 4px 10px rgba(0,0,0,0.15);">
+       📖 Read Full Story (PDF)
+    </a>
+  </div>
+      
+</section>
+
 
   </section>
 
@@ -304,4 +323,5 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
