--- a/index.html
+++ b/index.html
@@ -300,15 +300,12 @@ The doll still lives… and haunts the air.
       A chilling horror story written by Kriti Kumari.  
       Read it as an eBook (PDF) below:
     </p>
-    <a href="welcome%20to%20the.pdf" target="_blank"
-   style="display:inline-block; margin-top:10px; padding:10px 15px;
-   background:#d46a6a; color:white; border-radius:8px; text-decoration:none;
-   font-weight:bold; box-shadow:0 4px 10px rgba(0,0,0,0.15);">
-   📖 Read Full Story (PDF)
+    <a href="Welcome%20to%20my%20bakery%20by%20Kriti%20Kumari.pdf" target="_blank">
+      📖 Read "Welcome to my Bakery" by Kriti Kumari
+
 </a>
-  
-  </div>
-      
+  </p>
+    
 </section>
 
 
@@ -324,6 +321,7 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
 
 
