--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <a href="#its-me">It’s Me</a>
     <a href="#princess">Princess November</a>
     <a href="#horror">Horror Poems</a>
+    <a href="#stories">Stories</a>
     <a href="#contact">Contact</a>
   </nav>
   <section id="about">
@@ -133,6 +134,13 @@
   </section>
   <section id="poems">
     <h2>Poems</h2>
+    
+<div class="poem">
+  <div class="poem-title">My Durga Ma!</div>
+    <img src="My%20Durga%20Ma!%20by%20Kriti%20Kumari.png" 
+       alt="My Durga Ma poem by Kriti Kumari" 
+       style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
+</div>
     <div class="poem">
       <div class="poem-title">Choice is Yours</div>
       <img src="Focus%20on%20good%20things.png" alt="Focus on Good Things - poem by Kriti Kumari" />
@@ -321,6 +329,7 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
 
 
