--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
   <section id="poems">
     <h2>Poems</h2>
     
-<div class="poem">
-  <div class="poem-title">My Durga Ma!</div>
-  <img src="My%20durga%20ma%20by%20Kriti%20kumari.png" 
-       alt="My Durga Ma poem by Kriti Kumari" 
-       style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
-</div>
+ <div class="poem">
+    <div class="poem-title">My Durga Ma</div>
+    <img src="my-durga-ma-kriti-kumari.png" 
+         alt="My Durga Ma poem by Kriti Kumari" 
+         style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
+  </div>
     <div class="poem">
       <div class="poem-title">Choice is Yours</div>
       <img src="Focus%20on%20good%20things.png" alt="Focus on Good Things - poem by Kriti Kumari" />
@@ -329,6 +329,7 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
 
 
