--- a/index.html
+++ b/index.html
@@ -135,12 +135,13 @@
   <section id="poems">
     <h2>Poems</h2>
     
-  <div class="poem">
+ <div class="poem">
     <div class="poem-title">My Durga Ma</div>
-    <img src="My%20Durga%20Ma!%20by%20Kriti%20Kumari.png" 
+    <img src="My%20durga%20ma%20by%20Kriti%20kumari%20.png" 
          alt="My Durga Ma poem by Kriti Kumari" 
          style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
   </div>
+
 
     <div class="poem">
       <div class="poem-title">Choice is Yours</div>
@@ -330,6 +331,7 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
 
 
