--- a/index.html
+++ b/index.html
@@ -315,6 +315,17 @@ The doll still lives… and haunts the air.
 
 </a>
   </p>
+     <div class="poem">
+    <div class="poem-title">THE FUNERAL FIRE </div>
+    <p>
+      A chilling horror story written by Kriti Kumari.  
+      Read it as an eBook (PDF) below:
+    </p>
+    <a href="THE%20FUNERAL%20FIRE%20BY%20KRITI.K.pdf" target="_blank">
+      📖 Read "THE FUNERAL FIRE " by Kriti Kumari
+
+</a>
+  </p>
     
 </section>
 
@@ -331,6 +342,7 @@ The doll still lives… and haunts the air.
   </footer>
 </body>
 </html>
+
 
 
 
